Update votos
